# text_editor

./: README.md  jahudka.toml  pyproject.toml
editor/: app.py  main.py  tab.py
texteditor/: README.md  pyproject.gitignore  pyproject.toml
texteditor/editor/: app.py  main.py  tab.py
