[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muj-python-editor"
version = "0.1.0"
authors = [
  { name="Tvé Jméno", email="tvuj@email.cz" },
]
description = "Jednoduchý textový editor v Pythonu (Tkinter)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
spustit-editor = "editor.main:main"